# chat_app

./: .gitignore
clients/openclaw-client/openclaw-client/: ContentView.swift  Info.plist  README.md  openclaw_clientApp.swift
clients/openclaw-client/openclaw-client.xcodeproj/: project.pbxproj
openclaw/: .env.example  Makefile  README.md  pyproject.toml
openclaw/app/: main.py
openclaw/app/api/: agent.py  chat.py  conversations.py  events.py  export.py  jobs.py  reports.py  system_prompts.py
openclaw/app/middleware/: auth.py
openclaw/app/schemas/: agent.py  chat.py  jobs.py
openclaw/app/services/: db.py  llm_router.py  models.py  store.py
openclaw/app/services/agent/: executor.py  planner.py  policy.py
openclaw/app/services/agent/tools/: base.py  external_ai.py  filesystem.py  shell.py
openclaw/app/services/jobs/: scheduler.py  worker.py
openclaw/app/services/jobs/tasks/: __init__.py  daily_summary.py  market_analysis.py  memory_daily_summary.py  memory_monthly_summary.py  memory_weekly_summary.py  research_report.py
openclaw/app/services/llm/: intent_classifier.py  prompt_builder.py  router_config.py  tool_dispatcher.py
openclaw/app/services/memory/: graph_store.py  migrate_embeddings.py  summarizer.py  vector_store.py
openclaw/app/services/providers/: base.py  gemini.py  ollama.py
openclaw/app/static/: app.js  index.html
openclaw/scripts/: init_db.py  init_db.sql  init_postgres.sql
openclaw/scripts/migrations/: 001_kd_schema.sql  002_add_model_to_messages.sql
openclaw/tests/: test_api.py  test_gemini.py  test_store.py
(+27 files in other folders)
