[project]
name = "openclaw"
version = "0.1.0"
description = "Personal AI console web MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
    "sentence-transformers>=5.2.3",
    "ollama>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.3",
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
